FIX: java version 낮춰서 문법 변경